# hlsgraph

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  NOTICE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  build_backend.py  pyproject.toml  sbom.spdx.json
.github/: CODEOWNERS  pull_request_template.md
docs/: architecture.md  fixtures.md  interfaces.md  knowledge-citation-audit-v0.3.json  knowledge-citation-audit.md  knowledge-review-evidence-v0.3.json  knowledge-review-runbook.md  privacy-and-security.md  references.md  release-notes-v0.3.0.md  retrieval.md  schema.md  versioning.md
eval/: __init__.py
synthetic-runtime/: bwrap
tests/: __init__.py  agent_eval_runtime_support.py  attested_run_support.py  reviewed_knowledge_support.py  test_action_lineage.py  test_agent_eval.py  test_agent_eval_fail_closed.py  test_agent_eval_release_binding.py  test_api_mcp.py  test_apply_knowledge_review_suite_attestation.py  test_binding_evidence_round3.py  test_build_backend.py  test_cli.py  test_cli_init_atomicity.py  test_compiler_identity_p1.py  test_core_contracts.py  test_diagnostic_projection.py  test_directive_replay.py  test_directive_truth_p1.py  test_docs_current_contract.py  test_evidence_closure.py  test_execute_knowledge_review_suite.py  test_execution_attestation.py  test_extraction_fixture.py  test_freshness_protocol.py  test_knowledge.py  test_knowledge_citation_audit.py  test_knowledge_review_release_gate.py  test_knowledge_review_shards.py  test_knowledge_review_suite.py  test_knowledge_review_suite_cache.py  test_knowledge_review_suite_release_audit.py  (+28 more)
(+131 files in other folders)
